--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,9 @@
 
 .byebug_history
 
-.idea/
+.idea/# React on Rails
+npm-debug.log*
+node_modules
+
+# Generated js bundles
+/app/assets/webpack/*
