--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ node_modules
 
 # Generated js bundles
 /app/assets/webpack/*
+# React on Rails
+npm-debug.log*
+node_modules
+
+# Generated js bundles
+/public/webpack/*
