--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,33 @@
   "name": "calendareact",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
-    "immutability-helper": "^2.6.6",
-    "moment": "^2.21.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-datetime": "^2.14.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "reactstrap": "^5.0.0-beta.2"
+    "bootstrap": "^4.3.1",
+    "immutability-helper": "^3.0.0",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-datetime": "^2.16.3",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
